# devsink

./: .gitignore  README.md  flake.nix
src/: meson.build
src/lcdsink/: direct.frag  direct.vert  lcdmodulator.h  lcdsink_conf_def.h.in  lcdsink_def.h  lcdsink_main.cpp  lcdsink_path_def.h.in  meson.build
src/lib/: glad  glfw-cxx  glm  gloo  kato  link  shmio  stb  testbed  toml11
src/stbsink/: meson.build  stbmodulator.h  stbsink_conf_def.h.in  stbsink_def.h  stbsink_main.cpp  stbsink_path_def.h.in
